cluster/apps/mediaserver/radarr/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: radarr
  namespace: mediaserver
spec:
  hosts:
    - radarr.${ROOT_DOMAIN}
  gateways:
    - istio-ingress/cluster-ingress-gateway
  http:
    - route:
        - destination:
            port:
              number: 7878
            host: radarr.mediaserver.svc.cluster.local
